# hw08

./: CMakeLists.txt  assignDate.cpp  assignDoctor.cpp  assignExpense.cpp  assignPatient.cpp  bill.cpp  billType.cpp  date.cpp  dateType.cpp  dateType::print.cpp  doctor.cpp  doctorType.cpp  doctorType::print.cpp  header.h  main.cpp  patient.cpp  patientType.cpp  patientType::print.cpp  person.cpp  personType.cpp  personType::print.cpp  personType::setName.cpp  printExpenses.cpp
